# list-python-dependencies

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  action.yml  list_dependencies.py  list_python_dependencies.py  pyproject.toml  requirements-linting.txt
.github/workflows/: ci.yml
test-case/: pyproject.toml
